# graphics-experiments

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLM.cmake
include/: BezierExcercise.h  BezierExercise.h  CameraExcercise.h  CameraExercise.h  CubePrimitive.h  CubeShape.h  DelaunayExercise.h  IExcercise.h  IExercise.h  ILoader.h  IPrimitive.h  IShape.h  MeshShape.h  ObjLoader.h  PlyLoader.h  SfmlHelper.h  SpherePrimitive.h  SphereShape.h  TransformationExcercise.h  TransformationExercise.h
include/imgui-1.69/: imconfig.h  imgui.h
src/: BezierExcercise.cpp  BezierExercise.cpp  CameraExcercise.cpp  CameraExcercise.h  CameraExercise.cpp  CubePrimitive.cpp  CubeShape.cpp  DelaunayExercise.cpp  MeshShape.cpp  ObjLoader.cpp  PlyLoader.cpp  SfmlHelper.cpp  SpherePrimitive.cpp  SphereShape.cpp  TransformationExcercise.cpp  TransformationExercise.cpp  main.cpp
